add /Users/mozhenghua/j2ee_solution/project/tis-solr/design/enable-oracle-cdc/README.md for instruducion enable-oracle-cdc